# Jira-copy

./: README.md  pyproject.toml
src/jira_copy/: config.py  fetch_data.py  http_methods.py  issue_types.py  statuses.py
