[project]
name = "jira-copy"
version = "0.1.0"
description = ""
authors = [
    {name = "beclarkkv",email = "beclark@kinetic-vision.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "jira_copy", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
